--- a/index.ipynb
+++ b/index.ipynb
@@ -44,13 +44,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "5\n",
+      "8\n",
+      "13\n",
+      "21\n",
+      "34\n"
+     ]
+    }
+   ],
    "source": [
     "#Your code here\n",
     "def fib(n):\n",
-    "    return nth_number"
+    "    if n<1 :\n",
+    "        return \"n has to be 1 or bigger\"\n",
+    "    elif n in [1,2]:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        nth_number = fib(n-1) + fib(n-2) \n",
+    "    return nth_number\n",
+    "\n",
+    "for i in range(1, 10):\n",
+    "    print(fib(i))"
    ]
   },
   {
@@ -68,13 +93,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "[2, 3, 4]\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "[6, [7, 8], 9]\n",
+      "6\n",
+      "[7, 8]\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5, 6, 7, 8, 9]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Your code here\n",
-    "def flat_list(L):\n",
-    "    return flattened"
+    "\n",
+    "\n",
+    "\n",
+    "def flat_list(L, result=None):\n",
+    "    if result is None:\n",
+    "        result = []\n",
+    "    \n",
+    "    for i in L:\n",
+    "        print (i)\n",
+    "        if type(i)==list:\n",
+    "            flat_list(i, result)\n",
+    "        else:\n",
+    "            result.append(i)\n",
+    "    return result \n",
+    "        \n",
+    "L = [1,[2,3,4],5,[6,[7,8],9]]\n",
+    "flat_list(L)"
    ]
   },
   {
@@ -87,12 +156,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#Your answer here."
+    "#Your answer here.\n",
+    "\n",
+    "I have used the depth first recursive call. In every list code went down to each branch and add the values to the result list. Whenever a sub list is done, it went back one step up and keep going from there. \n",
+    "\n"
    ]
   },
   {
@@ -120,7 +190,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
